syntax = "proto3";
package proto;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/vivekab/golib/protobuf/protoroot";

message Timestamps {
  google.protobuf.Timestamp created_at = 1;
  google.protobuf.Timestamp modified_at = 2;
  google.protobuf.Timestamp activated_at = 3;
  google.protobuf.Timestamp deactivated_at = 4;
}